--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.7.4",
+    "@vee-validate/rules": "^4.7.4",
     "axios": "^1.3.3",
     "pinia": "^2.0.28",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
