--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vee-validate/rules": "^4.7.4",
     "axios": "^1.3.3",
     "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
