--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: ["develop"]
 
 jobs:
   build-and-deploy:
@@ -10,11 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3 
+      - uses: actions/checkout@v3
+
+      - name: Copy .env
+        uses: canastro/copy-file-action@master
+        with:
+          source: ".env.staging"
+          target: ".env"
       - name: Build
-        - uses: actions/setup-node@v3
-          - run: npm install
-          - run: npm run build
+        uses: actions/setup-node@v3
+        run: npm install
+        run: npm run build
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
