--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
           target: ".env"
       - name: Build
         uses: actions/setup-node@v3
-        run: npm install
-        run: npm run build
+        - run: npm install
+        - run: npm run build
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
