--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,9 @@ jobs:
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
+          name: id_rsa_ambientecode
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          known_hosts: unnecessary
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts 
       - name: Deploy with rsync
