--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,9 @@ jobs:
           target: ".env"
       - run: npm install
       - run: npm run build
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          known_hosts: unnecessary
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts 
-      - name: Deploy with rsync
-        run: rsync -avz -e ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:patrimonial.ambientecode.com.br
+      - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
+      with:
+        server: ftp.ambientecode.com.br
+        username: ambie114
+        password: ${{ secrets.FTP_PASSWORD }}
