--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,10 @@ jobs:
           username: patrimonial@patrimonial.ambientecode.com.br
           password: ${{ secrets.FTP_PASSWORD }}
           exclude: |
-            **/public*
+            **/.git**
+            **/.git*/**
+            **/node_modules/**
+            **/public**
             **/src/**
             **.json
             **.ts
