ci: remove comment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,37 +20,37 @@ jobs:
           target: ".env"
       - run: npm install
       - run: npm run build
-      # - name: 📂 Sync files
-      #   uses: SamKirkland/FTP-Deploy-Action@4.3.3
-      #   with:
-      #     server: ftp.ambientecode.com.br
-      #     username: patrimonial@patrimonial.ambientecode.com.br
-      #     password: ${{ secrets.FTP_PASSWORD }}
-      #     exclude: |
-      #       **/.git**
-      #       **/.git*/**
-      #       **/.github**
-      #       **/.vscode**
-      #       **/node_modules/**
-      #       **/public**
-      #       **/src/**
-      #       **.json
-      #       **.ts
-      #       **.js
-      #       **.cjs
-      #       **.md
-      #       **.html
-      #       .editorconfig
-      #       .env
-      #       .env.staging
-      #       .env.development
-      #       .gitignore
-      # - name: Copy files to root
-      #   uses: appleboy/ssh-action@v0.1.7
-      #   with:
-      #     host: ${{ secrets.SSH_HOST }}
-      #     username: ${{ secrets.SSH_USER }}
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     script: |
-      #       cp -R /dist ./
-      #       rm -rf dist
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.3.3
+        with:
+          server: ftp.ambientecode.com.br
+          username: patrimonial@patrimonial.ambientecode.com.br
+          password: ${{ secrets.FTP_PASSWORD }}
+          exclude: |
+            **/.git**
+            **/.git*/**
+            **/.github**
+            **/.vscode**
+            **/node_modules/**
+            **/public**
+            **/src/**
+            **.json
+            **.ts
+            **.js
+            **.cjs
+            **.md
+            **.html
+            .editorconfig
+            .env
+            .env.staging
+            .env.development
+            .gitignore
+      - name: Copy files to root
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cp -R /dist ./
+            rm -rf dist
