--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
 
-      - run: rm -rf /home/runner/work/_actions/SamKirkland/FTP-Deploy-Action/4.3.3/**
+      - run: rm -rf /home/runner/work/_actions/SamKirkland/
 
       - name: Copy .env
         uses: canastro/copy-file-action@master
