--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.3.1
         with:
           server: ftp.ambientecode.com.br
+          server-dir: distribution
           dangerous-clean-slate: true
           username: patrimonial@patrimonial.ambientecode.com.br
           password: ${{ secrets.FTP_PASSWORD }}
