--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,2 @@
-VITE_APP_URL=https://patrimonial.ambientecode.com.br
-VITE_API_URL=https://patrimonial.api.ambientecode.com.br/public/api/v1
+VITE_APP_URL=http://patrimonial.ambientecode.com.br
+VITE_API_URL=http://patrimonial.api.ambientecode.com.br/public/api/v1
