--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vee-validate/i18n": "^4.7.4",
     "@vee-validate/rules": "^4.7.4",
     "axios": "^1.3.3",
+    "maska": "^2.1.10",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vee-validate": "^4.7.4",
