--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vee-validate/i18n": "^4.7.4",
     "@vee-validate/rules": "^4.7.4",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.3.3",
     "maska": "^2.1.10",
     "pinia": "^2.0.28",
