--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^10.5.0",
     "axios": "^1.3.3",
     "maska": "^2.1.10",
+    "moment": "^2.30.1",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vee-validate": "^4.7.4",
